Refactored for User based access to resources